fix(client): tooltip overlapping with CKEditor pane (closes #844)

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -579,11 +579,7 @@ table.promoted-attributes-in-tooltip th {
 
 .tooltip {
     font-size: var(--main-font-size) !important;
-    /*
-        TODO: Investigate the purpose of this
-        z-index: calc(var(--ck-z-panel) - 1) !important;
-    */
-    z-index: 3000;
+    z-index: calc(var(--ck-z-panel) - 1) !important;
 }
 
 .tooltip-trigger {
